--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node index.js",
     "migrate": "knex migrate:latest",
     "rb": "knex migrate:rollback",
-    "seed": "knex seed:run"
+    "seed": "knex seed:run",
+    "test": "cross-env DB_ENV=testing jest --watchAll --verbose --runInBand"
   },
   "repository": {
     "type": "git",
@@ -34,7 +35,12 @@
     "postgresql": "0.0.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "@types/jest": "^26.0.20",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.19.0",
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3"
   },
   "engines": {
     "node": "14.15.4",
